--- a/nivu_soft/docker-compose.yml
+++ b/nivu_soft/docker-compose.yml
@@ -1,23 +1,17 @@
+version: '3'
+
 services:
   react-dev:
     container_name: nivu_dev
-    image: node:20-alpine
+    build:
+      context: .
+      dockerfile: Dockerfile
     working_dir: /app
     volumes:
       - .:/app
       - /app/node_modules
     ports:
       - "5173:5173"
-    command: ["npm", "run", "dev", "--", "--host"]
     environment:
       - NODE_ENV=development
-
-  react-prod:
-    container_name: nivu_prod
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - "8080:80"
-    environment:
-      - NODE_ENV=production
+    command: ["npm", "run", "dev", "--", "--host"]
