--- a/nivu_soft/Dockerfile
+++ b/nivu_soft/Dockerfile
@@ -1,4 +1,16 @@
-FROM node:20-alpine
+FROM node:20
+
+WORKDIR /app
+
+COPY package.json package-lock.json* ./
+RUN npm install
+
+COPY . .
+
+EXPOSE 5173
+
+CMD ["npm", "run", "dev", "--", "--host"]
+FROM node:20
 
 WORKDIR /app
 
