--- a/nivu_soft/docker-compose.yml
+++ b/nivu_soft/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3'
-
 services:
   react-dev:
     container_name: nivu_dev
@@ -8,7 +6,7 @@ services:
       dockerfile: Dockerfile
     working_dir: /app
     volumes:
-      - .:/app
+      - .:/app:cached
       - /app/node_modules
     ports:
       - "5173:5173"
