--- a/nivu_soft/package.json
+++ b/nivu_soft/package.json
@@ -10,16 +10,23 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.6",
+    "crypto-js": "^4.2.0",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "framer-motion": "^12.19.1",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.552.0",
     "motion": "^12.23.24",
+    "node-cron": "^4.2.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
     "serve": "^14.2.4",
+    "sqlite3": "^5.1.7",
     "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar-hide": "^4.0.0"
   },
