--- a/nivu_soft/docker-compose.yml
+++ b/nivu_soft/docker-compose.yml
@@ -1,15 +1,15 @@
+version: '3.8'
+
 services:
-  react-dev:
-    container_name: nivu_dev
-    build:
-      context: .
-      dockerfile: Dockerfile
-    working_dir: /app
-    volumes:
-      - .:/app:cached
-      - /app/node_modules
+  app:
+    build: .
+    container_name: nivu_payment_app
     ports:
-      - "5173:5173"
+      - "19245:19245"
+    volumes:
+      - ./data:/app/data
     environment:
-      - NODE_ENV=development
-    command: ["npm", "run", "dev", "--", "--host"]
+      - PAYPHONE_TOKEN=${PAYPHONE_TOKEN}
+      - PAYPHONE_STORE_ID=${PAYPHONE_STORE_ID}
+      - PAYPHONE_CODING_PASSWORD=${PAYPHONE_CODING_PASSWORD}
+    restart: always
