--- a/nivu_soft/nginx.conf
+++ b/nivu_soft/nginx.conf
@@ -1,11 +1,20 @@
 server {
-  listen 80;
-  server_name localhost;
+    listen 80;
+    server_name _; # Reemplazar con tu dominio real
 
-  root /usr/share/nginx/html;
-  index index.html;
+    location / {
+        proxy_pass http://localhost:19245;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
-  location / {
-    try_files $uri $uri/ /index.html;
-  }
+    # Configuración de seguridad básica
+    client_max_body_size 10M;
+    keepalive_timeout 65;
 }
