--- a/nivu_soft/nginx.conf
+++ b/nivu_soft/nginx.conf
@@ -2,6 +2,13 @@ server {
     listen 80;
     server_name _; # Reemplazar con tu dominio real
 
+    # Gzip Compression
+    gzip on;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_types text/plain text/css text/xml application/json application/javascript application/rss+xml image/svg+xml;
+
     location / {
         proxy_pass http://localhost:19245;
         proxy_http_version 1.1;
@@ -12,6 +19,13 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Cache Control for static assets (if they were served directly or proxied)
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+        expires 30d;
+        add_header Cache-Control "public, no-transform";
+        proxy_pass http://localhost:19245;
     }
 
     # Configuración de seguridad básica
