fix on payments

--- a/nivu_soft/Dockerfile
+++ b/nivu_soft/Dockerfile
@@ -9,9 +9,13 @@ RUN npm run build
 # Stage 2: Production environment
 FROM node:20-alpine
 WORKDIR /app
+
+# Install build dependencies for native modules (sqlite3)
+RUN apk add --no-cache python3 make g++
+
 COPY package*.json ./
-# Install only production dependencies
-RUN npm install --only=production
+# Install only production dependencies and rebuild sqlite3
+RUN npm install --only=production && npm rebuild sqlite3
 
 # Copy built assets from stage 1
 COPY --from=build-stage /app/dist ./dist
@@ -19,7 +23,6 @@ COPY --from=build-stage /app/dist ./dist
 COPY index.js .
 
 # SQLite database will be mounted as a volume for persistence
-# EXPOSE the Express port
 EXPOSE 19245
 
 CMD ["node", "index.js"]
